maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:12: error: '}' expected but 'case' found.
  case _ => println("This case should not happen. Please fix me")
  ^